--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "mocha",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
